test/test_11813225_6.out
Error type 14 at Line 10: accessing an undefined structure member
Error type 5 at Line 10: unmatching types appear at both sides of the assignment operator
