test/test_11813225_6.spl
struct cui {
  int cuiMax;
  float cuiPro;
  char cuiMini;
};

int cuicui()
{
  struct cui cuiAir;
  cuiAir.cui1 = 100;
}